# socialgpt

./: .gitignore  README.md  pyproject.toml
src/socialgpt/: main.py
